5/16/19
Add wiki as submodule and move pixiv notes
Push pixiv.js and original non-working implementation
Seperate Readme and Changelog
Use script.text instead of script.innerText
Add bookmarklet example files
Allow non-iframed scoped bookmarklet
First release and source code tracking